finished home and team page

--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -5,6 +5,11 @@
 $body-font: "Open Sans", "Helvetica", "sans-serif";
 $headers-font: "Raleway", "Helvetica", "sans-serif";
 
+// $gray: #d9534f;
+
+// @font-face {
+//   color: $gray;
+// }
 // To use a font file (.woff) uncomment following lines
 // @font-face {
 //   font-family: "Font Name";
